--- a/SomeEcomThing/SomeEcomThing.csproj
+++ b/SomeEcomThing/SomeEcomThing.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,11 +6,6 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="CreateOrderInBasket\" />
-    <Folder Include="Order\" />
   </ItemGroup>
 
 </Project>
